tests/integration/integration.exp
Error ------------------------------------------------------------------------------------------------------- foo.js:2:9

Cannot resolve module `./bar`.

   2| require('./bar');
              ^^^^^^^



Found 1 error
